recursion.cons.last.Last.scala.error
Compilation error:
Last:9: error: type mismatch;
 found   : Boolean
 required: List[Int]
};if (length(l == 1)) {
               ^Last:9: error: type mismatch;
 found   : Int
 required: Boolean
};if (length(l == 1)) {
            ^Last:12: error: type mismatch;
 found   : List[Int]
 required: Int
    l.tail
      ^